--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Venta de mates de calidad premium en 
+    Tramichi Mates. Encontra el mate perfecto para vos y disfrutalo con amigos.">
+    <meta name="keywords" content="mates, tramichi, venta,termos, canastas materas, yerberos, calidad, mendoza, argentina">
     <title>Tramichi Mates</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
