añadiendo seo a todas las secciones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tramichi Mates</title>
 
+    <meta name="description" content="Contáctanos para cualquier duda o consulta en Tramichi Mates. Completa nuestro formulario de contacto y te responderemos a la brevedad.">
+    <meta name="keywords" content="Tramichi Mates, Contacto, formulario de contacto, dudas, consultas">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
