--- a/pages/mayoristas.html
+++ b/pages/mayoristas.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tramichi Mates</title>
 
+    <meta name="description" content="Accede a precios mayoristas, envíos a todo el país y nuestro número de contacto para realizar pedidos en Tramichi Mates. ¡Regístrate ahora!">
+    <meta name="keywords" content="Tramichi Mates, Mayoristas, precios mayoristas, envíos a todo el país, número de contacto">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
