--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRODUCTOS</title>
+
+    <meta name="description" content="Bienvenido a la sección de productos de Tramichi Mates. Aquí encontrarás una amplia variedad de mates, termos, yerberos, canastas materas y bombillas. ¡Compra ahora!">
+    <meta name="keywords" content="Tramichi Mates, productos, mates, termos, yerberos, canastas materas, bombillas, precios, fotos">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
