--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tramichi Mates</title>
+
     <meta name="description" content="Venta de mates de calidad premium en 
     Tramichi Mates. Encontra el mate perfecto para vos y disfrutalo con amigos.">
     <meta name="keywords" content="mates, tramichi, venta,termos, canastas materas, yerberos, calidad, mendoza, argentina">
-    <title>Tramichi Mates</title>
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,6 +30,7 @@
     
 
 
+--! seccion header --! 
 
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -57,6 +60,7 @@
             </div>
         </nav>
     </header>
+
 
     <main>
         <section class="container-fluid">
