adaptando y dandole estilo al boton de busqueda

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                         <li class="nav-item"><a href="./pages/contacto.html">CONTACTO</a></li>
                     </ul>
                 
-                <form class="class=d-flex botonBuscar" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                <form class="class=d-flex botonBuscar d-flex justify-content-end" role="search">
+                    <input class="form-control me-2 btn-sm" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success btn-sm" type="submit">Buscar</button>
                 </form>   
                 </div>
             </div>
