--- a/pages/tramichitips.html
+++ b/pages/tramichitips.html
@@ -44,11 +44,10 @@
                         <li class="nav-item"><a href="./mayoristas.html">MAYORISTAS</a></li>
                         <li class="nav-item"><a href="./contacto.html">CONTACTO</a></li>
                     </ul>
-                
-                <form class="class=d-flex botonBuscar" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>   
+                <form class="class=d-flex botonBuscar d-flex justify-content-end" role="search">
+                    <input class="form-control me-2 btn-sm" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success btn-sm" type="submit">Buscar</button>
+                </form>                   
                 </div>
             </div>
         </nav>
