--- a/pages/tramichitips.html
+++ b/pages/tramichitips.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Aprende cómo curar un mate de calabaza o madera en TramichiTips. Sigue estos sencillos pasos para evitar que tu mate se raje y disfrutar de una buena cebada.">
     <meta name="keywords" content="Tramichi Mates, TramichiTips, curar mate, mate de calabaza, mate de madera">
 
+    <link rel="icon" type="image/png" href="../assets/favicon/favicon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
